--- a/13Sept.html
+++ b/13Sept.html
@@ -75,13 +75,7 @@
     <a href="#contact" class="btn btn-outline">Contacto</a>
   </div>
 
-    <!-- Inline Newsletter Box -->
-<div class="hidden lg:flex justify-center mt-8">
-  <form id="inline-newsletter-form" class="bg-white/10 backdrop-blur p-6 rounded-lg flex gap-4 items-center w-full max-w-2xl">
-    <input type="email" name="email" required placeholder="Ingresa tu correo" class="flex-1 px-4 py-2 rounded bg-black/50 text-white border border-white/20 focus:outline-none" />
-    <button type="submit" class="btn btn-primary">Suscribirme</button>
-  </form>
-</div>
+   
   
 </section>
 
@@ -94,46 +88,6 @@
         <img src="Junglesoul_image.png" alt="Junglesoul" class="w-full h-64 object-cover mb-4 rounded-md" />
         <h3 class="text-xl font-semibold">Junglesoul</h3>
         <p class="text-sm text-gray-300">Junglesoul, DJ y productor chileno con 17 años de trayectoria, impulsa la escena Drum & Bass desde Step Up, Organika Sessions y Shidzen Music. Mezcla Jungle, Footwork, Dubstep, pero por sobre todo Drum and Bass.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Drumblack_image.png" alt="Drumblack" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Drumblack</h3>
-        <p class="text-sm text-gray-300">DJ Drumblack, activo desde 2003, es referente del Drum and Bass chileno. Con técnica en vinilo, mezcla soulful, rolling y deep.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Frantik_image.png" alt="Frantik" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Frantik</h3>
-        <p class="text-sm text-gray-300">Frantik inicia en 1999 en la escena Drum & Bass de Barcelona. Productor y DJ, hoy difunde el sonido desde Junglist.cl y sellos globales, con raíces en Tiknology y Shidzen Music.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Cherry_image.png" alt="Cherry" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Cherry</h3>
-        <p class="text-sm text-gray-300">Cherry, DJ peruana de Cusco radicada en Chile desde 2019, destaca por su energía y técnica. Fusiona Drum & Bass y Tech con un enfoque futurista que rompe la pista en cada sesión.</p>
-      </div>
-        <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Robimess_image.png" alt="Robimess" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Robimess</h3>
-        <p class="text-sm text-gray-300">Maximo Gatica aka Robimess, chileno, 37 años. DJ de drum and bass desde 2004. Ha tocado con Thrasher, Blacksoul y más. Miembro de Switch Technique e Igneon System. Promotor de Prspct y fundador de KillerDrumz en Chile.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="BassBrain_image.png" alt="Bass Brain" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Bass Brain</h3>
-        <p class="text-sm text-gray-300">Claudio Vera aka BASS BRAIN Dj/Productor chileno de Concepción, +20 años de experiencia, especialista en Drum & BASS, Ragga Jungle y NeuroFunk (+170 bpms), fundador de ConceCityDNB e Hybrid Fest.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Ortokore_image.png" alt="Ortokore" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Ortokore</h3>
-        <p class="text-sm text-gray-300">Oscar Cartagena aka Ortokore: DJ, producer, chileno venezolano, drummer y bajista con +20 años de experiencia. Actuó en grandes festivales y escenarios nacionales e internacionales.</p>
-      </div>
-      <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="FatPablo_image.png" alt="Fat Pablo" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Fat Pablo</h3>
-        <p class="text-sm text-gray-300">Pablo Sepúlveda aka Fat Pablo, pionero del Jungle/DnB en Chile desde 1999. Tocó en Creamfields, Lollapalooza con Massive Attack, Dj Marky y más. Ganador premio PULSE 2008. Embajador @kayaunite, residente @casaconejo.cl y fundador de Caja de Ritmos Records</p>
-      </div>
-       <div class="bg-white/5 p-6 rounded-lg text-center hover:bg-white/10 transition">
-        <img src="Metlman_image.png" alt="Meltman" class="w-full h-64 object-cover mb-4 rounded-md" />
-        <h3 class="text-xl font-semibold">Meltman</h3>
-        <p class="text-sm text-gray-300">Cristian Reyes aka Meltman, DJ chileno radicado en España, comienza desde 2017, fusiona deep, liquid y jungle en sus sets. Crea atmósferas únicas, mezclando sonidos alegres y oscuros en un viaje musical diverso y envolvente.</p>
       </div>
     </div>
   </section>
@@ -264,59 +218,19 @@
   </div>
 </div>
 
-  <!-- Gracias Modal -->
-<div id="gracias-modal" class="fixed inset-0 z-50 flex items-center justify-center bg-black/80 hidden">
-  <div class="bg-glass p-6 text-center rounded-lg border border-white/10 max-w-sm">
-    <h2 class="text-2xl font-bold text-white mb-2">¡Gracias por suscribirte!</h2>
-    <p class="text-sm text-gray-300 mb-4">Estás oficialmente en la lista de Step Up.</p>
-    <button onclick="closeGracias()" class="btn btn-primary">Cerrar</button>
-  </div>
-</div>
-
-  <script>
-  // Newsletter popup logic
-  function closePopup() {
-    document.getElementById('newsletter-popup').classList.add('hidden');
-    localStorage.setItem('newsletterShown', 'true');
-  }
-
-  function closeGracias() {
-    document.getElementById('gracias-modal').classList.add('hidden');
-    closePopup(); // also close newsletter popup if it's still open
-  }
-
-  window.addEventListener('load', () => {
-    if (!localStorage.getItem('newsletterShown')) {
-      setTimeout(() => {
-        document.getElementById('newsletter-popup').classList.remove('hidden');
-      }, 5000);
-    }
+ <script>
+async function sendTest() {
+  const response = await fetch("https://YOUR-VERCEL-APP.vercel.app/api/send-email", {
+    method: "POST"
   });
-
-  // Simulated submission logic
-  function handleFormSubmit(formId) {
-    const form = document.getElementById(formId);
-    form.addEventListener('submit', function (e) {
-      e.preventDefault();
-      const email = form.querySelector('input[name=\"email\"]').value;
-
-      // Send using FormSubmit
-      fetch('https://formsubmit.co/ajax/junglistcl@gmail.com', {
-        method: 'POST',
-        headers: { 'Content-Type': 'application/json' },
-        body: JSON.stringify({ email })
-      }).then(() => {
-        document.getElementById('gracias-modal').classList.remove('hidden');
-        form.reset();
-      }).catch(() => {
-        alert('Hubo un error al suscribirte. Intenta de nuevo.');
-      });
-    });
-  }
-
-  handleFormSubmit('popup-newsletter-form');
-  handleFormSubmit('inline-newsletter-form');
+  const result = await response.json();
+  console.log(result);
+  alert("✅ Email enviado! Revisa tu bandeja.");
+}
 </script>
+
+<button onclick="sendTest()">Enviar test</button>
+
 
   
 </body>
