--- a/13Sept.html
+++ b/13Sept.html
@@ -218,18 +218,34 @@
   </div>
 </div>
 
- <script>
+<script>
 async function sendTest() {
   const response = await fetch("https://step-up-eight.vercel.app/api/send-email", {
-    method: "POST"
+    method: "POST",
+    headers: { "Content-Type": "application/json" },
+    body: JSON.stringify({
+      to: [
+        { email: "junglesoul.c@gmail.com" },
+        { email: "friend2@email.com" }
+      ],
+      subject: "🔥 Test desde el botón",
+      text: "Hola! Este es un correo enviado desde el botón en la web ✅",
+      html: "<h2 style='color:cyan'>Step Up Crew</h2><p>Email enviado desde la web 🚀</p>"
+    })
   });
+
   const result = await response.json();
   console.log(result);
-  alert("✅ Email enviado! Revisa tu bandeja.");
+  if (response.ok) {
+    alert("✅ Email enviado! Revisa tu bandeja.");
+  } else {
+    alert("❌ Error: " + (result.error || JSON.stringify(result)));
+  }
 }
 </script>
 
 <button onclick="sendTest()">Enviar test</button>
+
 
 
   
